# Mirage-Engine

./: .gitignore  CMakeLists.txt  README.md  memoTP.txt
shader/: Textu.hpp  cubemaps_FragmentShader.glsl  cubemaps_VertexShader.glsl  light_FragmentShader.glsl  light_VertexShader.glsl  material_FragmentShader.glsl  normal_FragmentShader.glsl  normal_VertexShader.glsl  rand_FragmentShader.glsl  textu_FragmentShader.glsl  textu_VertexShader.glsl
src/: main.cpp  mainscene.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h  opengldemo.cpp
src/bspline/: Bspline.cpp  Bspline2D.cpp  bspline.cpp  bspline.hpp  bspline2D.cpp  bspline2D.hpp
src/light/: Light.hpp
src/mesh/: BSplineLine.cpp  BSplineLine.hpp  BSplineSurface.cpp  BSplineSurface.hpp  ControlPoints.cpp  ControlPoints.hpp  Cube.cpp  Cube.hpp  CubeMap.cpp  CubeMap.hpp  DemoBSplineLine.cpp  DemoBSplineLine.hpp  DemoBSplineSurface.cpp  DemoBSplineSurface.hpp  DemoNURBSLine.cpp  DemoNURBSLine.hpp  DemoNURBSSurface.cpp  DemoNURBSSurface.hpp  DeprecatedMesh.hpp  IcoSphere.cpp  IcoSphere.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  NURBSLine.cpp  NURBSLine.hpp  NURBSSurface.cpp  NURBSSurface.hpp  Textu.cpp  Textu.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  bSplineLine.cpp  bSplineLine.h  bSplineSurface.cpp  bSplineSurface.h  controlPoints.cpp  controlPoints.h  (+8 more)
src/nurbs/: NURBS.cpp  NURBS.hpp  NURBS2D.cpp  NURBS2D.hpp
src/openGL/: Camera.cpp  Camera.hpp  DeprecatedDrawParameter.hpp  DrawParameter.hpp  Mainscene.cpp  Mainscene.hpp  OpenGLMain.cpp  ProgramGL.cpp  ProgramGL.hpp  mesh.h  (+13 more)
(+39 files in other folders)
